--- a/hyprland.conf
+++ b/hyprland.conf
@@ -8,16 +8,10 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
-
-
-##################
-### WORKSPACES ###
-##################
-
-workspace = 1, name:browser
-workspace = 2, name:
-workspace = 10, name:social
+monitor=,preferred,auto,1
+misc {
+    vrr = false
+}
 
 ###################
 ### MY PROGRAMS ###
@@ -26,7 +20,7 @@ workspace = 10, name:social
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 $terminal = ghostty
-$fileManager = dolphin
+# $fileManager = dolphin
 $menu = wofi --show drun
 
 
@@ -38,9 +32,10 @@ $menu = wofi --show drun
 # Or execute your favorite apps at launch like this:
 
 exec-once = $terminal
+exec-once = zen-browser
 # exec-once = nm-applet &
-exec-once = waybar & hyprpaper
-
+exec-once = waybar
+exec-once = hyprpaper
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -151,28 +146,34 @@ decoration {
 animations {
     enabled = yes, please :)
 
-    # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-
     bezier = easeOutQuint,0.23,1,0.32,1
     bezier = easeInOutCubic,0.65,0.05,0.36,1
     bezier = linear,0,0,1,1
     bezier = almostLinear,0.5,0.5,0.75,1.0
     bezier = quick,0.15,0,0.1,1
 
-    animation = global, 1, 10, default
-    animation = border, 1, 5.39, easeOutQuint
-    animation = windows, 1, 4.79, easeOutQuint
-    animation = windowsIn, 1, 4.1, easeOutQuint, popin 87%
-    animation = windowsOut, 1, 1.49, linear, popin 87%
-    animation = fadeIn, 1, 1.73, almostLinear
-    animation = fadeOut, 1, 1.46, almostLinear
-    animation = fade, 1, 3.03, quick
-    animation = layers, 1, 3.81, easeOutQuint
-    animation = layersIn, 1, 4, easeOutQuint, fade
-    animation = layersOut, 1, 1.5, linear, fade
+    animation = global, 0, 1, quick
+
+    animation = windows, 1, 1, easeOutQuint
+    # animation = windowsIn, 1, 0.1, linear
+    # animation = windowsOut, 1, 0.1, linear
+
+    # animation = global, 1, 10, default
+    # animation = border, 1, 5.39, easeOutQuint
+
+
+    # animation = fadeIn, 1, 10.73, almostLinear
+    # animation = fadeOut, 1, 10.46, almostLinear
+
+    # animation = layers, 1, 1, quick
+    # animation = layersIn, 1, 4, easeOutQuint, fade
+    # animation = layersOut, 1, 1.5, linear, fade
+
+    animation = fadeSwitch, 1, 2.0, almostLinear
     animation = fadeLayersIn, 1, 1.79, almostLinear
     animation = fadeLayersOut, 1, 1.39, almostLinear
-    animation = workspaces, 1, 1.94, almostLinear, fade
+
+    animation = workspaces, 1, 1.5, almostLinear, fade
     animation = workspacesIn, 1, 1.21, almostLinear, fade
     animation = workspacesOut, 1, 1.94, almostLinear, fade
 }
@@ -225,20 +226,18 @@ input {
     touchpad {
         natural_scroll = false
     }
+
+    tablet {
+        region_position = 0, 0
+        region_size = 1920, 1080
+        active_area_size = 216, 121.5
+    }
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
     workspace_swipe = false
 }
-
-# Example per-device config
-# See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
-device {
-    name = epic-mouse-v1
-    sensitivity = -0.5
-}
-
 
 ###################
 ### KEYBINDINGS ###
@@ -254,11 +253,11 @@ $RIGHT = L
 bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
-bind = $mainMod, E, exec, $fileManager
+# bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, D, exec, $menu
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+# bind = $mainMod alt, P, pseudo, # dwindle
+bind = $mainMod alt, J, togglesplit, # dwindle
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, $LEFT, movefocus, l
@@ -266,7 +265,7 @@ bind = $mainMod, $RIGHT, movefocus, r
 bind = $mainMod, $UP, movefocus, u
 bind = $mainMod, $DOWN, movefocus, d
 
-# Move Window with mainMod + shitf + arrow keys
+# Move Window with mainMod + shift + arrow keys
 bind = $mainMod shift, $LEFT, movewindow, l
 bind = $mainMod shift, $RIGHT, movewindow, r
 bind = $mainMod shift, $UP, movewindow, u
@@ -297,8 +296,8 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+# bind = $mainMod, S, togglespecialworkspace, magic
+# bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
@@ -307,20 +306,31 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+bindm = $mainMod, o, fullscreen 0
 
+## OLD
 # Laptop multimedia keys for volume and LCD brightness
-bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
-bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
-bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
+#bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
+#bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+#bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+#bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+#bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
+#bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
 
 # Requires playerctl
-bindl = , XF86AudioNext, exec, playerctl next
-bindl = , XF86AudioPause, exec, playerctl play-pause
-bindl = , XF86AudioPlay, exec, playerctl play-pause
-bindl = , XF86AudioPrev, exec, playerctl previous
+## OLD
+# bindl = , XF86AudioNext, exec, playerctl next
+# bindl = , XF86AudioPause, exec, playerctl play-pause
+# bindl = , XF86AudioPlay, exec, playerctl play-pause
+# bindl = , XF86AudioPrev, exec, playerctl previous
+
+bind = $mainMod SHIFT, $RIGHT, exec, playerctl next
+bind = $mainMod SHIFT, $UP, exec, playerctl play-pause
+bind = $mainMod SHIFT, $LEFT, exec, playerctl previous
+
+bind = $mainMod ALT, $UP, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
+bind = $mainMod ALT, $DOWN, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
@@ -329,11 +339,15 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
 
-# Example windowrule
-# windowrule = float,class:^(kitty)$,title:^(kitty)$
-
-# Ignore maximize requests from apps. You'll probably like this.
-windowrule = suppressevent maximize, class:.*
-
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+windowrulev2 = workspace 1, class:^(.*tty)$
+windowrulev2 = workspace 2, class:^(zen*|firefox|chromium|google-chrome|brave)$
+windowrulev2 = workspace 7, class:^.*((S|s)potify).*$
+windowrulev2 = workspace 8, class:^.*((S|s)team).*$
+windowrulev2 = workspace 9, class:((D|d)iscord)
+
+xwayland {
+  force_zero_scaling = true
+}
